#973: Probema amb la passarel·la de firmes
Task-Url: https://github.com/GovernIB/helium/issues/issues/973

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -781,6 +781,7 @@ expedient.tipus.redireccio.form.dataFi=Data fi
 expedient.tipus.redireccio.controller.creat=La redirecció s'ha creat correctament
 expedient.tipus.redireccio.controller.modificat=La redirecció s'ha modificat correctament
 expedient.tipus.redireccio.controller.eliminat=La redirecció s'ha elimitat correctament
+expedient.tipus.redireccio.controller.usuaris.error=Error obtenint els usuaris per rol del domini itern per a la redirecció: {0}
 expedient.tipus.redireccio.validacio.dataFi.anterior=La data fi ha de ser major o igual a la data d'inici
 expedient.tipus.redireccio.validacio = Errors de validació
 
