#980: Info portafirmes en documents rebutjats i processats
Task-Url: https://github.com/GovernIB/helium/issues/issue/980

NOVA RELEASE: 3.1.89

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -105,6 +105,7 @@ expedient.document.info_registre=Document enviat al registre
 expedient.document.pendent.psigna=Pendent de signatura
 expedient.document.info_psigna=Document pendent del portasignatures
 expedient.document.pendent.psigna.error=Error en la comunicació amb el portasignatures
+expedient.document.rebutjat.psigna.error=Document rebutjat en el portasignatures
 expedient.document.info.sensedocuments=No hi ha documents per modificar
 expedient.document.info.senseaccions=No hi ha accions per executar
 expedient.editar.informacio=Modificar informació de l'expedient
