#959: Revisió control d'accés i permisos nova interfície 3.2
Task-Url: https://github.com/GovernIB/helium/issues/959

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -144,6 +144,7 @@ error.permisos.consultar.expedient=No té permisos per consultar aquest expedient
 error.permisos.modificar.expedient=No té permisos per modificar aquest expedient
 error.permisos.anular.expedient=No té permisos per anul·lar aquest expedient
 error.permisos.script.expedient=No té permisos per executar scrits sobre aquest expedient
+error.permisos.buidar.logs=No té permisos per buidar la informació del registre
 
 error.esborrar.dada.proces=No s''ha pogut esborrar la dada del procés
 error.esborrar.dada.tasca=No s''ha pogut esborrar la dada de la tasca
