--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -1569,7 +1569,7 @@ tasca.signa.signa_oblig=Signatura obligatòria
 tasca.signa.no_te_suport=No te suport per applets Java 2 SDK, Standard Edition v 1.5 ! !
 tasca.signa.signar=Signar
 tasca.signa.signar.applet=Firma amb applet
-tasca.signa.signar.passarela=Firma amb passarel·la
+tasca.signa.signar.passarela=Firma
 tasca.signa.tipus_no_sup=Tipus de signatura no suportat
 tasca.signa.docs_marcats=Els documents marcats amb
 tasca.signa.son_sign_oblig=són de signatura obligatòria
