#984: Actualització manual disseny 3.2
Task-Url: https://github.com/GovernIB/helium/issues/984

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -645,7 +645,7 @@ expedient.tipus.accio.form.accio.jbpmAction=Handler
 expedient.tipus.accio.form.accio.descripcio=Descripció
 expedient.tipus.accio.form.accio.publica=Pública
 expedient.tipus.accio.form.accio.oculta=Oculta
-expedient.tipus.accio.form.accio.rols=rols
+expedient.tipus.accio.form.accio.rols=Restringir als rols
 
 expedient.tipus.accio.validacio.codi.repetit=Aquest codi ja existeix
 expedient.tipus.accio.controller.creat=La acció s'ha creat correctament
