--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -451,7 +451,8 @@ expedient.tipus.camp.llistat.accio.esborrar.validacio.registre=La variable perta
 
 expedient.tipus.camp.llistat.confirmacio.esborrar=Estau segur que voleu esborrar aquesta variable?
 expedient.tipus.camp.llistat.agrupacio.seleccionada=Agrupació seleccionada
-expedient.tipus.camp.llistat.agrupacio.seleccionada.placeholder=Cap
+expedient.tipus.camp.llistat.agrupacio.opcio.totes=Totes
+expedient.tipus.camp.llistat.agrupacio.opcio.sense=Sense agrupació
 expedient.tipus.camp.llistat.agrupacio.boto.crear=Crear nova agrupació
 expedient.tipus.camp.llistat.agrupacio.boto.modificar=Modificar la agrupació seleccionada
 expedient.tipus.camp.llistat.agrupacio.boto.esborrar=Eliminar la agrupació seleccionada
