#992: Error. Variable de tipus "ACCIÓ" a la tasca inicial del procés dóna error al formulari d'inici d'expedient
Task-Url: https://github.com/GovernIB/helium/issues/issues/992

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -997,6 +997,7 @@ definicio.proces.detall.cap=Aquesta definició de procés no conté cap dada
 
 
 definicio.proces.tasca.llistat.columna.codi=Codi
+definicio.proces.tasca.llistat.columna.inicial=Inicial
 definicio.proces.tasca.llistat.columna.titol=Títol
 definicio.proces.tasca.llistat.accio.variables=Variables
 definicio.proces.tasca.llistat.accio.documents=Documents
