#997: Error. No es pot guardar el valor de la variable des del ws de tramitació
Task-Url: https://github.com/GovernIB/helium/issues/issues/997

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -361,6 +361,8 @@ error.usurol.buit=L'usuari/Rol no pot ser buit
 
 error.festiu.modificar=Error al modificar el festiu
 
+error.expedientLogHelper.noExisteix.processInstance=No s''ha trobat la instància de procés amb identificador "{0}"
+
 # ##########
 # Datatables
 # ##########
