#998: Error. No apareixen les definicions de procés en la selecció per les variables tipus acció
Task-Url: https://github.com/GovernIB/helium/issues/issues/998

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -491,6 +491,7 @@ expedient.tipus.camp.form.camp.dominiCacheText=Mantenir valor de la consulta
 expedient.tipus.camp.form.camp.defprocJbpmKey=Definició de procés
 expedient.tipus.camp.form.camp.defprocJbpmKey.placeholder=Seleccioni la definició de procés que conté el handler
 expedient.tipus.camp.form.camp.jbpmAction=Handler
+expedient.tipus.camp.form.camp.jbpmAction.placeholder=Seleccioni el handler
 
 
 expedient.tipus.camp.form.fieldset.accio=Dades per la acció
