#1000: Error 500 a la passarel·la de firmes quan s'envia a firmar una imatge
Task-Url: https://github.com/GovernIB/helium/issues/issues/1000

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -1367,6 +1367,7 @@ passarelafirma.form.camp.motiu=Motiu
 passarelafirma.form.camp.lloc=Lloc de la firma
 passarelafirma.form.iniciar=Iniciar procés de firma
 passarelafirma.controller.error.filtres=No existeix cap mòdul de firma que passi els filtres
+document.controller.firma.passarela.inici.error=S''ha produït un error inciant la passarel·la de firma: {0}
 document.controller.firma.passarela.final.cancel=La firma del document ha estat cancel·lada
 document.controller.firma.passarela.final.ok=La firma del document ha finalitzat correctament
 document.controller.firma.passarela.final.ok.nofile=La firma del document ha finalitzat correctament però no ha retornat cap document
@@ -1376,7 +1377,6 @@ document.controller.firma.passarela.final.error=La firma del document ha produit
 document.controller.firma.passarela.final.error.validacio=La firma del document ha produit un error al validar i custodiar: 
 document.controller.firma.passarela.final.cancel=La firma del document ha estat cancel·lada
 document.controller.firma.passarela.final.desconegut=La firma del document ha finalitzat amb estat desconegut
-
 #############################################################
 # MISSATGES D'ERROR
 #############################################################
