#1002: Error no capturat obrint formulari extern
Task-Url: https://github.com/GovernIB/helium/issues/issues/1002

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -326,6 +326,7 @@ error.tascaService.noTrobada=No s''ha trobat la tasca
 error.tascaService.noAssignada=Aquest usuari no té aquesta tasca assignada
 error.tascaService.noPendent=La tasca no està en estat pendent
 error.tascaService.noDisponible=Aquesta tasca no està disponible
+error.tascaService.formExtern.inici=Error iniciant el formulari extern: {0}
 
 error.terminiService.noIniciat=El termini no està iniciat
 error.terminiService.noPausat=El termini no està pausat
