#1004: Funcionalitat per a finalitzar expedient
Task-Url: https://github.com/GovernIB/helium/issues/issue/1004

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -183,6 +183,7 @@ expedient.eines.confirm_aturar=Estau segur que voleu donar aquesta tasca per fin
 expedient.eines.confirm_aturar_tramitacio=Estau segur que voleu aturar la tramitació d'aquest expedient?
 expedient.eines.confirm_modificar_variable=Estau segur que voleu modificar el valor d'aquesta variable en aquest(s) expedient(s)?
 expedient.eines.confirm_modificar_document=Estau segur que voleu modificar aquest document en aquest(s) expedient(s)?
+expedient.eines.finalitzar=Estau segur que voleu finalitzar aquest expedient?
 expedient.eines.confirm_reprendre_tramitacio=Estau segur que voleu reprendre la tramitació d'aquest expedient?
 expedient.eines.confirm_reprendre_tramitacions=Estau segur que voleu reprendre la tramitació dels expedients?
 expedient.eines.confirm_reindexar_expedient=Estau segur que voleu reindexar l'expedient?
@@ -191,6 +192,8 @@ expedient.eines.confirm_buidarlog_expedient=Estau segur que voleu eliminar la in
 expedient.eines.confirm_buidarlog_expedients=Estau segur que voleu eliminar la informació de registre del(s) expedient(s)? Un cop realitzada aquesta acció, no es podran retrocedir els expedients mitjançant la informació de registre!!!
 expedient.eines.confirm_reprendre_expedient=Estau segur que voleu desfer la finalització de l'expedient?
 expedient.eines.confirm_reprendre_expedients=Estau segur que voleu desfer la finalització del(s) expedient(s)?
+expedient.eines.confirm_finalitzar_expedient=Estau segur que voleu finalitzar l'expedient?
+expedient.eines.confirm_finalitzar_expedients=Estau segur que voleu finalitzar el(s) expedient(s)?
 expedient.eines.confirm_reassignar_expedients=Estau segur que voleu reassignar la(es) tasca(ques)?
 expedient.eines.confirm_executar_script_proces=Estau segur que voleu executar aquest script en aquest procés?
 expedient.eines.confirm_canviar_versio_proces=Estau segur que voleu canviar la versió d'aquest procés?
@@ -204,6 +207,8 @@ expedient.eines.reindexar.expedients=Reindexar expedients
 expedient.eines.buidarlog_proces=Eliminar la informació de registre de l'expedient
 expedient.eines.reprendre_expedient=Desfer finalització de l'expedient
 expedient.eines.reprendre_expedients=Desfer finalització dels expedients
+expedient.eines.finalitzar_expedient=Finalitzar expedient
+expedient.eines.finalitzar_expedients=Finalitzar expedients
 expedient.eines.buidarlog.expedients=Eliminar la informació de registre dels expedients
 expedient.eines.reassignar.expedients=Reassignar tasca
 expedient.eines.propagar.plantilles=Propagar plantilles ({0})
@@ -289,7 +294,8 @@ expedient.log.accio.EXPEDIENT_ACCIO=Executar acció de l'expedient
 expedient.log.accio.EXPEDIENT_RETROCEDIR=Retrocedir accions de l'expedient
 expedient.log.accio.PROCES_DOCUMENT_SIGNAR=Procesar document del portasignatures
 expedient.log.accio.EXPEDIENT_RETROCEDIR_TASQUES=Retrocedir tasques de l'expedient
-expedient.log.accio.EXPEDIENT_FINALIZTAR=Finalitzar expedient
+expedient.log.accio.EXPEDIENT_DESFINALITZAR=Desfinalitzar expedient
+expedient.log.accio.EXPEDIENT_FINALITZAR=Finalitzar expedient
 expedient.log.objecte=Element
 expedient.log.objecte.TASCA=Tasca
 expedient.log.objecte.PROCES=Procés
@@ -571,9 +577,11 @@ info.buidarlog.executat=S'ha eliminat la informació de registre de l'expedient
 info.accio.massiu.reassignat=S&#39;ha programat la reassignació de {0} tasca(ques)
 info.accio.massiu.reprendre=S&#39;ha programat l&#39;acció de reprendre tramitació de {0} expedient(s)
 info.accio.massiu.reprendre_expedient=S&#39;ha programat l'acció de desfer finalització de {0} expedient(s)
+info.accio.massiu.finalitzar_expedient=S&#39;ha programat l&#39;acció de finalitzar {0} expedient(s)
 info.expedient.desanulat = L'expedient s'ha activat correctament
 info.dada.creat=La dada s'ha creat correctament
 info.expedient.reindexat=L'expedient s&#39;ha reindexat correctament
+info.expedient.finalitzat=L'expedient s&#39;ha finalitzat correctament
 info.expedient.buidatlog=La informació de registre de l'expedient s'ha eliminat correctament
 info.expedient.reprendre=L'expedient s'ha reprès correctament
 info.expedient.canviversio=S'ha canviat la versió de l'expedient correctament
@@ -752,6 +760,7 @@ comuns.reassignar=Reassignar
 comuns.reindexar=Reindexar
 comuns.buidarlog=Eliminar informació de registre
 comuns.reprendre=Reprendre
+comuns.finalitzar=Finalitzar
 comuns.sexe=Sexe
 comuns.si=Si
 comuns.suggerir=Suggerir
@@ -1595,6 +1604,7 @@ error.i_provau=i provau novament a executar la mateixa petició en uns instants.
 error.si_persist=Si l'error persisteix posau-vos en contacte amb l'administrador de l'aplicació.
 error.activar.expedient = Hi ha hagut un error a l'hora d'activar l'expedient
 error.reprendre.expedient = Hi ha hagut un error a l'hora d'activar l'expedient
+error.finalitzar.expedient = Hi ha hagut un error a l'hora de finalitzar l'expedient
 error.permissos.desanular.expedients = No teniu permís per activar l'expedient
 login.autenticacio=Autenticació
 login.usuari=Usuari
