--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -150,6 +150,7 @@ expedient.info.accio.modificar=Modificar informació
 expedient.info.accio.relacionar=Afegir relació
 expedient.info.accio.aturar=Aturar tramitació
 expedient.info.accio.activar=Activar
+expedient.info.accio.finalitzar=Finalitzar
 expedient.info.accio.reprendre=Reprendre tramitació
 expedient.info.accio.anular=Anul·lar
 expedient.info.accio.desfinalitzar=Desfer finalització
