#1009: Habilitar permisos de la vella interfície
Task-Url: https://github.com/GovernIB/helium/issues/issue/1009

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -321,6 +321,7 @@ expedient.tipus.permis.columna.tipus=Tipus
 expedient.tipus.permis.columna.permisos=Permisos
 expedient.tipus.permis.confirmacio.esborrar=Estau segur que voleu esborrar aquest permís?
 expedient.tipus.permis.accio.nou=Nou permís
+expedient.tipus.permis.permisos.descatalogats=Els següents permisos estan en desús
 
 expedient.tipus.permis.form.titol.nou=Nou permis
 expedient.tipus.permis.form.titol.modificar=Modificar permis
