#1008: Error en el filtre de tasques
Task-Url: https://github.com/GovernIB/helium/issues/issue/1008

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -80,6 +80,7 @@ expedient.llistat.filtre.camp.errors=Només amb errors
 expedient.llistat.filtre.camp.anulats=Mostra anul·lats
 expedient.llistat.filtre.camp.personals=Només amb tasques personals
 expedient.llistat.filtre.camp.meves=Només amb tasques meves
+expedient.llistat.filtre.camp.meves.disabled=No disposa dels permisos suficients
 expedient.llistat.filtre.camp.grup=Només amb tasques de grup
 expedient.llistat.columna.expedient=Expedient
 expedient.llistat.columna.iniciat=Iniciat el
