#937: Notificacions amb SICER
Task-Url: https://github.com/GovernIB/helium/issues/issue/937

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -143,6 +143,8 @@ expedient.termini.data.inici=Data d'inici
 expedient.termini.data.fi=Data de fi
 
 expedient.notificacio=Notificació
+expedient.notificacio.sistra.titol=Notificacions SISTRA
+expedient.notificacio.sicer.titol=Notificacions SICER
 expedient.notificacio.expedient=Notificació de l'expedient
 expedient.notificacio.error=Error de la notificacio 
 expedient.notificacio.unitat_administrativa=Unitat Administrativa
@@ -154,7 +156,10 @@ expedient.notificacio.avis_text_sms=Avís text SMS
 expedient.notificacio.ofici_titol=Ofici títol
 expedient.notificacio.ofici_text=Ofici text
 expedient.notificacio.notificacions=Notificacions
+expedient.notificacio.remesa=Codi Remesa
+expedient.notificacio.remesa.no_creada=NO CREADA
 expedient.notificacio.data_enviament=Data enviament
+expedient.notificacio.data_creacio=Data creació
 expedient.notificacio.data_recepcio=Data recepció
 expedient.notificacio.registre_num=Número registre
 expedient.notificacio.assumpte=Assumpte
@@ -171,13 +176,24 @@ expedient.notificacio.interessat.provincia=Provincia
 expedient.notificacio.interessat.municipi=Municipi
 expedient.notificacio.document_annexos=Documents i annexos
 expedient.notificacio.dades_generals=Dades generals
+expedient.notificacio.estat.pendent=PENDENT
 expedient.notificacio.estat.enviat=ENVIAT
+expedient.notificacio.estat.enviat.error=ERROR ENVIAMENT
 expedient.notificacio.estat.processat_ok=PROCESSAT
 expedient.notificacio.estat.processat_rebutjat=REBUTJAT
 expedient.notificacio.estat.processat_error=ERROR PROCESSANT
+expedient.notificacio.estat.entregat=ENTREGAT
+expedient.notificacio.estat.validat=ENVIAMENT VALIDAT
+expedient.notificacio.estat.validat.error=ERROR VALIDACIÓ
 expedient.notificacio.mostrar_error=Mostrar error
 expedient.notificacio.tornar_processar=Tornar a processar
+expedient.notificacio.sicer.reenviar=Regenerar i enviar remesa
+expedient.notificacio.sicer.refrescar=Refrescar estat
 expedient.notificacio.reprocessada=S'ha tornat a demanar el justificant
+expedient.notificacio.sicer.reenviada=S'ha tornat a generar i a enviar el fitxer de remesa
+expedient.notificacio.sicer.refrescada=S'ha refrescat l'estat de la remesa
+expedient.notificacio.sicer.reenviada.error=No s'ha pogut enviar el fitxer de remesa
+expedient.notificacio.sicer.refrescada.error=No s'ha pogut refrescar l'estat de la remesa
 
 expedient.eines.confirm_aturar=Estau segur que voleu donar aquesta tasca per finalitzada?
 expedient.eines.confirm_aturar_tramitacio=Estau segur que voleu aturar la tramitació d'aquest expedient?
@@ -194,16 +210,21 @@ expedient.eines.confirm_reprendre_expedients=Estau segur que voleu desfer la fin
 expedient.eines.confirm_reassignar_expedients=Estau segur que voleu reassignar la(es) tasca(ques)?
 expedient.eines.confirm_executar_script_proces=Estau segur que voleu executar aquest script en aquest procés?
 expedient.eines.confirm_canviar_versio_proces=Estau segur que voleu canviar la versió d'aquest procés?
+expedient.eines.confirm_notificacio_sicer=Estau segur que voleu crear la ramesa i enviar-la a SICER?
 expedient.eines.aturar_tramitacio=Aturar la tramitació de l'expedient
 expedient.eines.reprendre_tramitacio=Reprendre la tramitació de l'expedient
 expedient.eines.reprendre_tramitacions=Reprendre la tramitació dels expedients
 expedient.eines.motiu=Motiu
+expedient.eines.remesa.codi=Codi remesa
+expedient.eines.remesa.data_emisio=Data emisió
+expedient.eines.remesa.data_prevista_deposit=Data prevista deposit
 expedient.eines.execucio_scripts=Execució d'scripts
 expedient.eines.reindexa_proces=Reindexar l'expedient
 expedient.eines.reindexar.expedients=Reindexar expedients
 expedient.eines.buidarlog_proces=Eliminar la informació de registre de l'expedient
 expedient.eines.reprendre_expedient=Desfer finalització de l'expedient
 expedient.eines.reprendre_expedients=Desfer finalització dels expedients
+expedient.eines.notificacio_sicer=Generar enviament a SICER
 expedient.eines.buidarlog.expedients=Eliminar la informació de registre dels expedients
 expedient.eines.reassignar.expedients=Reassignar tasca
 expedient.eines.propagar.plantilles=Propagar plantilles ({0})
@@ -571,6 +592,7 @@ info.buidarlog.executat=S'ha eliminat la informació de registre de l'expedient
 info.accio.massiu.reassignat=S&#39;ha programat la reassignació de {0} tasca(ques)
 info.accio.massiu.reprendre=S&#39;ha programat l&#39;acció de reprendre tramitació de {0} expedient(s)
 info.accio.massiu.reprendre_expedient=S&#39;ha programat l'acció de desfer finalització de {0} expedient(s)
+info.accio.massiu.notificacio_sicer=S&#39;ha programat una remesa de {0} expedient(s) per enviar al SICER
 info.expedient.desanulat = L'expedient s'ha activat correctament
 info.dada.creat=La dada s'ha creat correctament
 info.expedient.reindexat=L'expedient s&#39;ha reindexat correctament
@@ -622,6 +644,7 @@ info.variable.modificada=La variable s'ha modificat correctament
 info.expedient.aturat=L'expedient s'ha aturat correctament
 info.expedient.aturats=S'ha(n) aturat
 info.expedient.massiu.aturats=S&#39;ha programat l&#39;aturada de {0} expedient(s)
+info.expedient.massiu.sicer=S&#39;ha programat l'enviament d'una remesa de {0} expedient(s)
 info.expedient.repres=L'expedient s'ha représ correctament
 info.expedient.reactivat=L'expedient s'ha activat correctament
 info.canvi.versio.realitzat=El canvi de versió s'ha realitzat correctament
@@ -752,6 +775,7 @@ comuns.reassignar=Reassignar
 comuns.reindexar=Reindexar
 comuns.buidarlog=Eliminar informació de registre
 comuns.reprendre=Reprendre
+comuns.notificar=Notificar
 comuns.sexe=Sexe
 comuns.si=Si
 comuns.suggerir=Suggerir
@@ -1596,6 +1620,7 @@ error.si_persist=Si l'error persisteix posau-vos en contacte amb l'administrador
 error.activar.expedient = Hi ha hagut un error a l'hora d'activar l'expedient
 error.reprendre.expedient = Hi ha hagut un error a l'hora d'activar l'expedient
 error.permissos.desanular.expedients = No teniu permís per activar l'expedient
+error.crear.remesa=No s'ha pogut crear la remesa amb els expedients
 login.autenticacio=Autenticació
 login.usuari=Usuari
 login.contrasenya=Contrasenya
