--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -220,7 +220,8 @@ expedient.tasca.temps.execucio=Temps execució
 expedient.log.expedient.cap=Aquest expedient no conté cap log
 expedient.log.proces.cap=Aquest proces no conté cap log
 
-expedient.notificacio.expedient.cap=Aquest expedient no conté cap notificació
+expedient.notificacio.expedient.sistra.cap=Aquest expedient no conté cap notificació al SISTRA
+expedient.notificacio.expedient.sicer.cap=Aquest expedient no conté cap notificació al SICER
 
 expedient.tasca.columna.tasca=Tasca
 expedient.tasca.columna.tasca.activa=Tasca activa
@@ -268,6 +269,7 @@ expedient.tipus.pipelles.pipella.definicions.proces=Definicions de procés
 expedient.tipus.pipelles.pipella.integracio.tramits=Integració amb tràmits
 expedient.tipus.pipelles.pipella.integracio.sistra=Integració amb SISTRA
 expedient.tipus.pipelles.pipella.integracio.forms=Integració amb forms
+expedient.tipus.pipelles.pipella.integracio.sicer=Integració amb SICER
 expedient.tipus.pipelles.pipella.enumeracions=Enumeracions
 expedient.tipus.pipelles.pipella.documents=Documents
 expedient.tipus.pipelles.pipella.terminis=Terminis
@@ -839,6 +841,16 @@ expedient.tipus.integracio.notificacio.avisSmsText=Text SMS d'avís
 expedient.tipus.integracio.notificacio.oficiTitol=Títol de l'ofici
 expedient.tipus.integracio.notificacio.oficiText=Text de l'ofici
 
+expedient.tipus.integracio.sicer.activar=Activar integració SICER
+expedient.tipus.integracio.sicer.sicerProducteCodi=Codi de producte
+expedient.tipus.integracio.sicer.sicerClientCodi=Codi de client
+expedient.tipus.integracio.sicer.sicerPuntAdmissioCodi=Codi punt d'Admissió
+expedient.tipus.integracio.sicer.sicerNomLlinatges=Nom i llinatges
+expedient.tipus.integracio.sicer.sicerDireccio=Adreça
+expedient.tipus.integracio.sicer.sicerPoblacio=Població
+expedient.tipus.integracio.sicer.sicerCodiPostal=Codi postal
+expedient.tipus.integracio.sicer.sicerSftpUser=Usuari SFTP
+expedient.tipus.integracio.sicer.sicerSftpPassword=Password SFTP
 
 expedient.tipus.integracio.tramits.controller.guardat=Els canvis s'han guardat correctament
 expedient.tipus.integracio.tramits.validacio = Errors de validació
