#1012: Limitar la edició d'enumeracions per al permís "disseny delegat"
Task-Url: https://github.com/GovernIB/helium/issues/issues/1012

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -687,10 +687,12 @@ expedient.tipus.enumeracio.valors.form.camp.codi=Codi
 expedient.tipus.enumeracio.valors.form.camp.nom=Nom
 
 expedient.tipus.enumeracio.controller.creat=L'enumeració s'ha creat correctament
-expedient.tipus.enumeracio.controller.creat.error=Error creant la enumeració: {0}
+expedient.tipus.enumeracio.controller.creat.error=Error creant l''enumeració: {0}
 expedient.tipus.enumeracio.controller.modificat=L'enumeració s'ha modificat correctament
+expedient.tipus.enumeracio.controller.modificat.error=Error modifican l''enumeració: {0}
 expedient.tipus.enumeracio.controller.eliminat=L'enumeració s'ha eliminat correctament
 expedient.tipus.enumeracio.controller.eliminat.us=L'enumeració s'està utilitzant com a variable en algún camp i no es pot esborrar.
+expedient.tipus.enumeracio.controller.eliminat.error=Error eliminant l''enumeració: {0}
 
 expedient.tipus.enumeracio.validacio.codi.repetit=Aquest codi ja existeix
 
