#1032: Millora usabilitat disseny consultes
Task-Url: https://github.com/GovernIB/helium/issues/1032

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -937,7 +937,8 @@ expedient.tipus.consulta.vars.llistat.accio.afegir=Afegir
 expedient.tipus.consulta.vars.llistat.accio.esborrar=Esborrar
 expedient.tipus.consulta.vars.llistat.confirmacio.esborrar=Estau segur que voleu esborrar aquest registre?
 
-expedient.tipus.consulta.vars.controller.creat=La variable s'ha creat correctament
+expedient.tipus.consulta.vars.controller.creat=S''han afegit correctament {0} variables
+expedient.tipus.consulta.vars.controller.crear.error=Error afegint la variable "{0}": {1}
 expedient.tipus.consulta.vars.controller.eliminar.success=La variable s'ha elimitat correctament
 expedient.tipus.consulta.vars.controller.eliminar.error=S'ha produït un error intentant eliminar la variable
 
