#1034: Opció de no retrocedir documents
Task-Url: https://github.com/GovernIB/helium/issues/1034

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -622,6 +622,8 @@ expedient.tipus.document.form.camp.codi_custodia=Codi per a la custòdia
 expedient.tipus.document.form.camp.codi_custodia.comment=Emprat en la signatura del document
 expedient.tipus.document.form.camp.tipus_doc=Tipus de document
 expedient.tipus.document.form.camp.tipus_doc.comment=Codi del document pel portasignatures
+expedient.tipus.document.form.camp.ignored=No retrocedir valor
+expedient.tipus.document.form.camp.ignored.comment=No esborrar el document en cas de retrocedir l'expedient
 
 #expedient.tipus.document.validacio.codi.repetit=Aquest codi ja existeix
 expedient.tipus.document.controller.creat=El document s'ha creat correctament
