#1038: Error amb les enumeracions globals i del tipus d'expedient
Task-Url: https://github.com/GovernIB/helium/issues/issues/1038

Pujo modificacions per a que la eina d'incorporació d'informació d'una
definició de procés no creï ni dominis ni enumeracions buides tal i com
feia el procés d'importació de la interfície antiga.

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -579,7 +579,9 @@ expedient.tipus.definicioProces.llistat.definicioProces.inicial=Marcar com inici
 expedient.tipus.definicioProces.llistat.definicioProces.inicial.error=S'ha produït un error al intentar establir la definició de procés inicial
 expedient.tipus.definicioProces.llistat.definicioProces.inicial.correcte=La definició de procés s'ha marcat com a inicial correctament
 expedient.tipus.definicioProces.llistat.definicioProces.incorporar=Incorporar la informació
-expedient.tipus.definicioProces.llistat.definicioProces.incorporar.error=S'ha produït un error durant la incorporació de la informació de la definició de procés
+expedient.tipus.definicioProces.llistat.definicioProces.incorporar.error=S''ha produït un error durant la incorporació de la informació de la definició de procés: {0}
+expedient.tipus.definicioProces.llistat.definicioProces.incorporar.error.enumeracio=No es troba l''enumeració "{0}" per la variable "{1}-{2}" a nivell d''entorn ni de tipus d''expedient
+expedient.tipus.definicioProces.llistat.definicioProces.incorporar.error.domini=No es troba el domini "{0}" per la variable "{1}-{2}" a nivell d''entorn ni de tipus d''expedient
 expedient.tipus.definicioProces.llistat.definicioProces.incorporar.correcte=La informació de la definició de procés s'ha incorporat correctament al tipus d'expedient
 expedient.tipus.definicioProces.llistat.definicioProces.esborrar=Esborrar la darrera versió
 expedient.tipus.definicioProces.llistat.definicioProces.esborrar.confirmacio=Estau segur que voleu esborrar la darrera versió d'aquesta definició de procés?
