#1052: Millora navegació llistat variables en el disseny
Task-Url: https://github.com/GovernIB/helium/issues/issues/1052

S'afegeix la opció "Totes" al llistat de variables

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -1276,6 +1276,7 @@ comu.boto.esborrar=Esborrar
 comu.boto.tornar=Tornar
 comu.boto.importar.dades=Importar dades
 comu.tots=Tots
+comu.totes=Totes
 comu.arxiu=Arxiu
 comu.processant=Processant
 
