--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -288,6 +288,7 @@ expedient.tipus.info.camp.permet.retroaccio=Permet retroacció?
 expedient.tipus.info.camp.permet.reindexacioAsincrona=Reindexar asíncronament?
 expedient.tipus.info.camp.definicio.proces.inicial=Definició de procés inicial
 expedient.tipus.info.camp.reponsable.defecte=Responsable per defecte
+expedient.tipus.info.camp.reponsable.defecte.error=No s'ha pogut trobar un responsable amb aquest codi. Canvieu-lo per evitar errors
 expedient.tipus.info.accio.modificar=Modificar
 expedient.tipus.info.accio.agrupar=Agrupar
 expedient.tipus.info.accio.desagrupar=Desagrupar
@@ -408,6 +409,7 @@ exportar.validacio.definicio.firma=La tasca "{0}" de la definició de procés "{1}
 expedient.tipus.importar.form.titol.nou=Importació d'un nou tipus d'expedient
 expedient.tipus.importar.form.titol.modificar=Importació d''un tipus d''expedient sobre el tipus d''expedient "{0} - {1}"
 expedient.tipus.importar.form.avis.codi.diferent=Avís: S''està important informació del tipus d''expedient <b>"{0} - {1}"</b> amb codi diferent de l''actual sobre el que s''està realitzant la importació
+expedient.tipus.importar.form.avis.responsable.no.trobat=Avís: No es troba cap usuari amb el codi de responsable per defecte <b>"{0}"</b>. Si incloeu les dades bàsiques canvieu-lo posteriorment per evitar problemes.
 expedient.tipus.importar.form.boto.carregar=Carregar
 expedient.tipus.importar.form.carregar=Carregar el fitxer
 expedient.tipus.importar.form.seleccionar=Seleccionar el contingut
