#1064: Error. Quan es canvia l'estat d'un expedient a "Finalitzat" no es pot canviar
Task-Url: https://github.com/GovernIB/helium/issues/issues/1064

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -172,6 +172,7 @@ expedient.info.confirm.dada.esborrar=Estau segur que voleu esborrar aquesta dada
 expedient.info.permis.no=No disposa de permís per a modificar l'expedient
 expedient.info.token.activat=El token s'ha activat correctament
 expedient.info.token.desactivat=El token s'ha desactivat correctament
+expedient.info.validacio.estat.finalitzat=No es pot deixar buit l'estat d'un expedient amb data de finalització. Si vol pot desfinalitzar l'expedient
 
 expedient.dada.mostrar.ocultes=Mostrar ocultes
 expedient.dada.borrar.error=S'ha produït un error al intentar esborrar la dada de l'expedient
