#1076: Millora. Redirecció accés a menús interfície 2.6
Task-Url: https://github.com/GovernIB/helium/issues/issues/1076

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -1038,6 +1038,7 @@ decorators.superior.rols=Rols
 decorators.superior.entorns=Entorns
 decorators.superior.festius=Festius
 decorators.superior.reassignacions=Reassignacions
+decorators.superior.parametres=Paràmetres aplicació
 
 defproc.accform.selec_hand=Seleccioni un handler
 defproc.accform.handler=Handler
