--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -1325,6 +1325,13 @@ termini.durada=Durada
 
 configuracio.festius.titol=Calendari de dies festius
 
+configuracio.parametres.titol=Paràmetres de l'aplicació
+configuracio.parametres.redireccionar=Redirecció accés a menús interfície 2.6
+configuracio.parametres.redireccionar.info=Si s'habilita es redigirà a l'usuari cap a la nova interfície en el cas que accedeixi als següents menús de la interfície antiga: nou expedient, tasques personals/grup i consulta d'expedients
+configuracio.parametres.accio.restaurar=Restaurar
+configuracio.parametres.accio.restaurar.confirmacio=Valors per defecte restaurats correctament
+configuracio.parametres.accio.guardar.confirmacio=Valors guardats correctament
+
 metriques.timers.llegenda=Llegenda:
 metriques.timers.pes=Pes: Nombre d'execucions x Temps mig d'una execució (ms)
 metriques.timers.temps.mig=Temps mig d'una execució (ms)
