#1067: Modificar la importació i exportació per especificar si la enumeració és global
Task-Url: https://github.com/GovernIB/helium/issues/issues/1067

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -383,8 +383,10 @@ exportar.validacio.mapeigSistra.document=En la integració amb Sistra és necessar
 exportar.validacio.variable.agrupacio=La variable "{0}" necessita la agrupació "{1}"
 exportar.validacio.variable.registre=La variable de tipus registre "{0}" necessita la variable "{1}"
 exportar.validacio.variable.accio=La variable de tipus accio "{0}" necessita la definició de procés "{1}"
-exportar.validacio.variable.seleccio.enumeracio=La variable de tipus selecció "{0}" necessita la enumeració "{1}"
-exportar.validacio.variable.seleccio.domini=La variable de tipus selecció "{0}" necessita el domini "{1}"
+exportar.validacio.variable.seleccio.enumeracio.entorn=La variable de tipus selecció "{0}" necessita l''''enumeració "{1}" a nivell d''''entorn
+exportar.validacio.variable.seleccio.enumeracio.tipexp=La variable de tipus selecció "{0}" necessita l''''enumeració "{1}" a nivell de tipus d''''expedient
+exportar.validacio.variable.seleccio.domini.entorn=La variable de tipus selecció "{0}" necessita el domini "{1}" a nivell d''''entorn
+exportar.validacio.variable.seleccio.domini.tipexp=La variable de tipus selecció "{0}" necessita el domini "{1}" a nivell de tipus d''''expedient
 exportar.validacio.variable.seleccio.consulta=La variable de tipus selecció "{0}" necessita la consulta "{1}"
 exportar.validacio.consulta.variable=La consulta "{0}" necessita la variable "{1}"
 exportar.validacio.consulta.variable.definicioProces=La consulta "{0}" necessita la variable "{1}" de la definició de procés "{2} v.{3}"
@@ -401,8 +403,10 @@ exportar.validacio.definicio.desplegada.tipus.expedient=La definició de procés "
 exportar.validacio.definicio.desplegada.entorn=La definició de procés "{0}" ja està desplegada a dins l'entorn
 exportar.validacio.definicio.variable=La tasca "{0}" de la definició de procés "{1}" necessita la variable "{2}"
 exportar.validacio.definicio.variable.consulta=La variable "{0}" de la definició de procés "{1}" necessita la consulta "{2}"
-exportar.validacio.definicio.variable.domini=La variable "{0}" de la definició de procés "{1}" necessita el domini "{2}" dins l'entorn o el tipus d'expedient
-exportar.validacio.definicio.variable.enumeracio=La variable "{0}" de la definició de procés "{1}" necessita la enumeracio "{2}" dins l'entorn o el tipus d'expedient
+exportar.validacio.definicio.variable.domini.entorn=La variable de tipus selecció "{0}" necessita el domini "{1}" a nivell d''''entorn
+exportar.validacio.definicio.variable.domini.tipexp=La variable de tipus selecció "{0}" necessita el domini "{1}" a nivell de tipus d''''expedient
+exportar.validacio.definicio.variable.enumeracio.entorn=La variable de tipus selecció "{0}" necessita l''''enumeració "{1}" a nivell d''''entorn
+exportar.validacio.definicio.variable.enumeracio.tipexp=La variable de tipus selecció "{0}" necessita l''''enumeració "{1}" a nivell de tipus d''''expedient
 exportar.validacio.definicio.document=La tasca "{0}" de la definició de procés "{1}" necessita el document "{2}"
 exportar.validacio.definicio.firma=La tasca "{0}" de la definició de procés "{1}" necessita el document "{2}" per una signatura
 
