#1087: Error. 404 després executar acció pipella de dades
Task-Url: https://github.com/GovernIB/helium/issues/issues/1087

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -240,6 +240,7 @@ error.extensio.document=L'extensió d''aquest document no està permesa
 error.extensio.document.permesa=L'extensió d''aquest document no està permesa. Només es permeten:
 
 error.executar.accio=No s''ha pogut executar l''acció
+error.executar.accio.camp=No s''ha pogut executar l''acció "{0}" del camp "{1}" per l''expedient amb ID={2}
 error.accio.no.permesa=No té permisos per executar aquesta acció
 error.executar.retroces=No s''ha pogut executar el retrocés
 error.validar.formulari=No s''ha pogut validar el formulari
