#1091: Error accedint pipella dades amb variables de simples a múltiple
Task-Url: https://github.com/GovernIB/helium/issues/issues/1091

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -1403,6 +1403,8 @@ document.controller.firma.passarela.final.error=La firma del document ha produit
 document.controller.firma.passarela.final.error.validacio=La firma del document ha produit un error al validar i custodiar: 
 document.controller.firma.passarela.final.cancel=La firma del document ha estat cancel·lada
 document.controller.firma.passarela.final.desconegut=La firma del document ha finalitzat amb estat desconegut
+
+variable.helper.error.recuperant.valor=Error convertint el valor a variable tipus {0} {1}
 #############################################################
 # MISSATGES D'ERROR
 #############################################################
